TMA-997 * Added ability to programmatically open/close notifications * Fixed issue with open/closing notifications on iOS with touch device

--- a/app/Resources/assets/sass/site/components/_notifications.scss
+++ b/app/Resources/assets/sass/site/components/_notifications.scss
@@ -5,6 +5,7 @@
 @mixin notification {
   padding: 20px;
   overflow: hidden;
+  outline: none;
 
   transition: background-color 0.2s;
 
